"Show code example" as button link, resolve errors and add spacing to docs (#975)
* docs: change code collapse trigger to button link

* docs: stop using deleted components and add some spacing

* fix: update IconButton outline to support HC mode

--- a/src/IconButton/_IconButton.scss
+++ b/src/IconButton/_IconButton.scss
@@ -33,7 +33,7 @@ $btn-icon-accent-color: white !default;
 
     &.focus,
     &:focus {
-        outline: 0;
+        outline: 2px transparent;
         background-color: $btn-icon-bg;
         color: $icon-color;
         box-shadow: inset 0 0 0 $btn-focus-width $icon-color;
